am - addded styling to index page, fixed some spacing stuff, fixed filter box shifting up after using filter

--- a/cooking/static/base.css
+++ b/cooking/static/base.css
@@ -85,7 +85,7 @@
 }
 .text_button:hover{
     color: var(--primary);
-    text-shadow: rgba(0, 0, 0, 0.25) 0 5px 15px; 
+    text-shadow: rgba(0, 0, 0, 0.25) 0 2px 20px; 
 }
 
 
@@ -166,7 +166,7 @@ footer {
 }
 
 #header-menu {
-    padding-right: 50px;
+    padding-right: 20px;
     position: relative;
 }
 
